fixes a section being too large in mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -213,7 +213,7 @@ p {
           //margin
         }
         margin: 10px;
-        width: 400px;
+        width: 300px;
         height: 300px;
         font-size: 1.2em;
       }
